# Nekos-API

./: .env.example  .gitignore  README.md  compose.yml
api/: .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
api/api/: admin.py  models.py  renderers.py  urls.py  urls_api.py  urls_sso.py  views.py  views_api.py  views_sso.py
api/api/migrations/: 0001_initial.py  0002_alter_sharedresourcetoken_object_id.py  0003_alter_sharedresourcetoken_object_id_and_more.py  0004_alter_sharedresourcetoken_token.py
api/applications/: apps.py  models.py  serializers.py  urls.py  views.py
api/applications/migrations/: 0001_initial.py  0002_alter_application_description_alter_application_icon.py  0003_alter_application_icon.py  0004_alter_application_user.py  0005_alter_application_icon.py  0006_application_post_logout_redirect_uris.py  0007_alter_application_icon.py
api/artists/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/artists/migrations/: 0003_artist_created_at_artist_updated_at.py  0004_artist_artist_name_index.py
api/categories/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/categories/migrations/: 0003_alter_category_is_nsfw_alter_category_name_and_more.py
api/characters/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/characters/migrations/: 0001_initial.py  0003_alter_character_birth_date_alter_character_id_and_more.py  0004_alter_character_gender.py  0005_alter_character_first_name_alter_character_last_name_and_more.py
api/gifs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/gifs/migrations/: 0001_initial.py  0001_squashed_0004_alter_gif_file.py  0002_rename_chaarcters_gif_characters_alter_gif_duration.py  0003_alter_gif_categories_alter_gif_characters.py  0004_alter_gif_file.py  0005_gif_aspect_ratio_gif_file_size_gif_frames_gif_height_and_more.py  0006_reaction_remove_gif_reactions_alter_gif_uploader_and_more.py  0007_reaction_is_nsfw.py  0008_alter_gif_emotions_alter_reaction_name.py  0009_alter_gif_emotions.py  0010_alter_gif_reactions_alter_reaction_name.py  0011_alter_gif_age_rating_alter_gif_emotions_and_more.py  0012_alter_gif_file.py
api/images/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/images/migrations/: 0003_image_categories.py  0005_image_dominant_color_image_primary_color.py  0006_alter_image_age_rating_alter_image_artist_and_more.py  0008_image_is_verified.py  0009_image_uploader.py  0012_image_title.py  0013_remove_image_is_verified_image_verification_status_and_more.py  0014_alter_image_age_rating_imagesourceresult.py  0015_imagesourceresult_status.py  0016_remove_imagesourceresult_result_and_more.py  0017_alter_image_aspect_ratio_alter_image_file.py  0018_image_orientation.py  0019_remove_image_primary_color_image_palette.py  0020_image_mimetype.py  0021_image_file_size.py  0022_alter_image_file.py  (+2 more)
api/lists/: admin.py  serializers.py  urls.py  views.py
api/nekos_api/: asgi.py  filters.py  hosts.py  middleware.py  oauth_validators.py  parsers.py  permissions.py  processors.py  settings.py  storage.py  urls.py  utils.py
api/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/utils/: __init__.py  jsonapi.py  tokens.py  webhooks.py
api/webhooks/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/api/: README.md  nginx.conf  pyproject.toml
(+412 files in other folders)
