[project]
name = "api"
version = "4.0.0"
description = ""
authors = [
    { name = "Nyeki.py", email = "84998222+Nekidev@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
